hello/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
    service: hello
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: hello
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
      annotations:
        sidecar.istio.io/userVolumeMount: '[{"name":"filters", "mountPath":"/filters", "readonly":true}]'
        sidecar.istio.io/agentLogLevel: info
        sidecar.istio.io/logLevel: info
    spec:
      containers:
      - name: hello
        image: hello
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
      volumes:
        - emptyDir: {}
          name: filters
